docs/api/qiskit/0.32/qiskit.chemistry.algorithms.pes_samplers.MorsePotential.md
---
title: MorsePotential
description: API reference for qiskit.chemistry.algorithms.pes_samplers.MorsePotential
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.pes_samplers.MorsePotential
---

# MorsePotential

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential" />

`MorsePotential(molecule)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Bases: `qiskit.chemistry.algorithms.pes_samplers.potentials.potential_base.PotentialBase`

Implements a 1D Morse potential.

Input units are Angstroms (distance between the two atoms), and output units are Hartrees (molecular energy).

Initializes the potential to the zero-function. [`fit()`](qiskit.chemistry.algorithms.pes_samplers.MorsePotential#fit "qiskit.chemistry.algorithms.pes_samplers.MorsePotential.fit") should be used afterwards to fit the potential to computed molecular energies.

**Parameters**

**molecule** (`Molecule`) – the underlying molecule.

**Raises**

**ValueError** – Only implemented for diatomic molecules

## Methods

### dissociation\_energy

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.dissociation_energy" />

`MorsePotential.dissociation_energy(scaling=1.0)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the calculated dissociation energy for the current fit.

**Parameters**

**scaling** (`float`) – Scaling to change units. (Default is 1.0 for Hartrees)

**Return type**

`float`

**Returns**

calculated dissociation energy for the current fit

### eval

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.eval" />

`MorsePotential.eval(x)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

After fitting the data to the fit function, predict the energy at a point x.

**Parameters**

**x** (`float`) – value to evaluate surface in

**Return type**

`float`

**Returns**

value of surface in point x

### fit

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.fit" />

`MorsePotential.fit(xdata, ydata, initial_vals=None, bounds_list=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Fits a potential to computed molecular energies.

**Parameters**

*   **xdata** (`List`\[`float`]) – interatomic distance points (Angstroms)
*   **ydata** (`List`\[`float`]) – molecular energies (Hartrees)
*   **initial\_vals** (`Optional`\[`List`\[`float`]]) – Initial values for fit parameters. None for default. Order of parameters is d\_e, alpha, r\_0 and m\_shift (see fit\_function implementation)
*   **bounds\_list** (`Optional`\[`Tuple`\[`List`\[`float`], `List`\[`float`]]]) – Bounds for the fit parameters. None for default. Order of parameters is d\_e, alpha, r\_0 and m\_shift (see fit\_function implementation)

**Return type**

`None`

### fit\_function

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.fit_function" />

`static MorsePotential.fit_function(x, d_e, alpha, r_0, m_shift)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Functional form of the potential.

**Parameters**

*   **x** (`float`) – x parameter of morse potential
*   **d\_e** (`float`) – d\_e parameter of morse potential
*   **alpha** (`float`) – alpha parameter of morse potential
*   **r\_0** (`float`) – r\_0 parameter of morse potential
*   **m\_shift** (`float`) – m\_shift parameter of morse potential

**Return type**

`float`

**Returns**

potential functional form

### fundamental\_frequency

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.fundamental_frequency" />

`MorsePotential.fundamental_frequency()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the fundamental frequency for the current fit (in s^-1).

**Return type**

`float`

**Returns**

fundamental frequency for the current fit

### get\_equilibrium\_geometry

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.get_equilibrium_geometry" />

`MorsePotential.get_equilibrium_geometry(scaling=1.0)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the interatomic distance corresponding to minimal energy.

**Parameters**

**scaling** (`float`) – Scaling to change units. (Default is 1.0 for Angstroms)

**Return type**

`float`

**Returns**

interatomic distance corresponding to minimal energy

### get\_maximum\_trusted\_level

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.get_maximum_trusted_level" />

`MorsePotential.get_maximum_trusted_level(n=0)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the maximum energy level for which the particular implementation still provides a good approximation of reality.

**Parameters**

**n** (`int`) – vibronic mode

**Return type**

`float`

**Returns**

maximum\_trusted\_level estimated

### get\_minimal\_energy

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.get_minimal_energy" />

`MorsePotential.get_minimal_energy(scaling=1.0)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the smallest molecular energy for the current fit.

**Parameters**

**scaling** (`float`) – Scaling to change units. (Default is 1.0 for Hartrees)

**Return type**

`float`

**Returns**

smallest molecular energy for the current fit

### get\_num\_modes

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.get_num_modes" />

`MorsePotential.get_num_modes()`

This (1D) potential represents a single vibrational mode

**Return type**

`int`

### get\_trust\_region

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.get_trust_region" />

`MorsePotential.get_trust_region()`

The potential will usually be well-defined (even if not useful) for arbitrary x so we return a fairly large interval here. Redefine in derived classes if needed.

**Return type**

`Tuple`\[`float`, `float`]

### update\_molecule

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.update_molecule" />

`MorsePotential.update_molecule(molecule)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Updates the underlying molecule.

**Parameters**

**molecule** (`Molecule`) – chemistry molecule

**Raises**

**ValueError** – Only implemented for diatomic molecules

**Return type**

`None`

### vibrational\_energy\_level

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.vibrational_energy_level" />

`MorsePotential.vibrational_energy_level(n)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the n-th vibrational energy level for the current fit (in Hartrees).

**Parameters**

**n** (`int`) – vibrational mode

**Return type**

`float`

**Returns**

vibrational energy level for the current fit

### wave\_number

<span id="qiskit.chemistry.algorithms.pes_samplers.MorsePotential.wave_number" />

`MorsePotential.wave_number()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/morse_potential.py "view source code")

Returns the wave number for the current fit (in cm^-1).

**Return type**

`float`

**Returns**

wave number for the current fit

